# FX-ANALIZER

./: .dockerignore  .env.example  .gitignore  .npmrc  MASTER.md  README.md  docker-compose.yml  package.json
apps/api/: .eslintrc.json  Dockerfile  jest.config.cjs  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/adapters/: cme.adapter.ts  market-data.adapter.ts  mock-cme.adapter.ts
apps/api/src/alerts/: alerts.controller.ts  alerts.module.ts
apps/api/src/cot/: cot.controller.ts  cot.module.ts
apps/api/src/demo/: demo-feed.module.ts  demo-feed.service.ts
apps/api/src/health/: health.controller.ts
apps/api/src/macro/: macro.controller.ts  macro.module.ts
apps/api/src/market/: market.controller.ts  market.module.ts
apps/api/src/news/: news.controller.ts  news.module.ts
apps/api/src/quant/: flow-score.spec.ts  flow-score.ts  stats.spec.ts  stats.ts
apps/api/src/replay/: replay.controller.ts  (+2 more)
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
docs/: AGENTS.md  ALERT_LOGIC.md  API_KEYS.md  ARCHITECTURE.md  ASSUMPTIONS.md  DATA_LICENSES.md  DATA_SOURCES.md  INDICATORS.md  INSTALL_WINDOWS.md  REQUIREMENTS.md  RISK_DISCLOSURE.md  ROADMAP.md
infra/migrations/: 001_init.sql
infra/prometheus/: prometheus.yml
services/notification-service/: Dockerfile  pyproject.toml
services/notification-service/app/: main.py
services/quant-engine/: Dockerfile  pyproject.toml
services/quant-engine/app/: indicators.py  main.py
services/quant-engine/app/tests/: test_indicators.py
tests/: README.md
(+25 files in other folders)
